--- a/aula06/ex003.html
+++ b/aula06/ex003.html
@@ -24,7 +24,7 @@
         var n1 = Number.parseInt(window.prompt('Digite um número: ')) // String
         var n2 = Number.parseInt(window.prompt('Digite outro número: ')) // String
         var s = n1 + n2 
-        window.alert(`A soma entre ${n1} e ${n2} é ${s} `) // Concatenação
+        window.alert(`A soma entre ${n1} e ${n2} é ${s} `) // Template Strings
         // (number + number) para adição
         // (string + string) para concatenação
     </script>
